--- a/ViewModel/ViewModel.csproj
+++ b/ViewModel/ViewModel.csproj
@@ -72,6 +72,7 @@
         <Compile Include="CrossValidator.cs" />
         <Compile Include="MainVM.cs" />
         <Compile Include="ParametersVM.cs" />
+        <Compile Include="ParameterType.cs" />
         <Compile Include="ParameterVM.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
