--- a/ViewModel/packages.config
+++ b/ViewModel/packages.config
@@ -3,6 +3,8 @@
   <package id="CommunityToolkit.Diagnostics" version="8.2.1" targetFramework="net472" />
   <package id="CommunityToolkit.Mvvm" version="8.2.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net472" developmentDependency="true" />
+  <package id="StyleCop.Analyzers.Unstable" version="1.2.0.507" targetFramework="net472" developmentDependency="true" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
