feature(sln): some important code.

--- a/AutoCADConnector/AutoCADConnector.csproj
+++ b/AutoCADConnector/AutoCADConnector.csproj
@@ -53,7 +53,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connector.cs" />
+    <Compile Include="AutoCadBuilder.cs" />
+    <Compile Include="AutoCadConnector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
