--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -41,9 +41,11 @@
     <ItemGroup>
         <Compile Include="CadType.cs" />
         <Compile Include="GearParameters.cs" />
-        <Compile Include="ICadBuilder.cs" />
-        <Compile Include="ICadConnector.cs" />
-        <Compile Include="Parameter.cs" />
+        <Compile Include="Interfaces\ICadBuilder.cs" />
+        <Compile Include="Interfaces\ICadConnector.cs" />
+        <Compile Include="Parameters\DoubleParameter.cs" />
+        <Compile Include="Parameters\IntParameter.cs" />
+        <Compile Include="Parameters\Parameter.cs" />
         <Compile Include="ParameterType.cs" />
         <Compile Include="Project.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
