--- a/AutoCADConnector/AutoCADConnector.csproj
+++ b/AutoCADConnector/AutoCADConnector.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="AutoCadBuilder.cs" />
     <Compile Include="AutoCadConnector.cs" />
+    <Compile Include="CircleArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
