--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -46,11 +46,21 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Tests.cs" />
+        <Compile Include="ValidatorTest.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Model\Model.csproj">
+        <Project>{0b0c478e-d2de-4860-b6ac-418364db82d2}</Project>
+        <Name>Model</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\ViewModel\ViewModel.csproj">
+        <Project>{2d6bc469-5f2f-40a9-9419-14b1bd434c0a}</Project>
+        <Name>ViewModel</Name>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
