--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -46,6 +46,7 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="ParametersVMTest.cs" />
         <Compile Include="ProjectTest.cs" />
         <Compile Include="ValidatorTest.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
