--- a/ViewModel/ViewModel.csproj
+++ b/ViewModel/ViewModel.csproj
@@ -39,6 +39,7 @@
         <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
           <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.7.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
         </Reference>
+        <Reference Include="Microsoft.Build.Framework" />
         <Reference Include="mscorlib" />
         <Reference Include="System"/>
         <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -70,13 +71,16 @@
         <Compile Include="MainVM.cs" />
         <Compile Include="ParameterVM.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="Validator.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="App.config" />
       <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\Logger\Logger.csproj">
+        <Project>{81f939a2-f2c7-4715-aa5d-574645a4f3db}</Project>
+        <Name>Logger</Name>
+      </ProjectReference>
       <ProjectReference Include="..\Model\Model.csproj">
         <Project>{0b0c478e-d2de-4860-b6ac-418364db82d2}</Project>
         <Name>Model</Name>
