--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -39,11 +39,11 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="DoubleParameter.cs" />
         <Compile Include="Interfaces\ICadBuilder.cs" />
         <Compile Include="Interfaces\ICadConnector.cs" />
-        <Compile Include="IntParameter.cs" />
-        <Compile Include="Parameter.cs" />
+        <Compile Include="Parameters\DoubleParameter.cs" />
+        <Compile Include="Parameters\IntParameter.cs" />
+        <Compile Include="Parameters\Parameter.cs" />
         <Compile Include="ParameterType.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
