--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -46,9 +46,14 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="ParametersVMTest.cs" />
-        <Compile Include="ValidatorTest.cs" />
+        <Compile Include="LoggerTests\LoggerTest.cs" />
+        <Compile Include="ModelTests\ParameterTests\DoubleParameterTest.cs" />
+        <Compile Include="ModelTests\ParameterTests\IntParameterTests.cs" />
+        <Compile Include="ModelTests\ParameterTests\ParameterTest.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="ViewModelTests\MainVMTest.cs" />
+        <Compile Include="ViewModelTests\ParameterVMTest.cs" />
+        <Compile Include="ViewModelTests\ParametersVMTest.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
